<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HealthTest</string>
    <string name="title_section1">Recording</string>
    <string name="title_section2">Tests</string>
    <string name="title_section3">Stations</string>
    <string name="title_section4">Results</string>
    <string name="title_section5">Settings</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="action_profile">Profile</string>
    <string name="title_activity_test">Test</string>
    <string name="hello_world">Hello world!</string>
    <string name="test_code">Test Code KU0258</string>
    <string name="label_station">Station</string>
    <string name="label_id">No.</string>
    <string name="label_score">Score</string>
    <string name="button_send">Send</string>
    <string name="toast_null_input">missing inputs</string>
    <string name="toast_send_seccess">sent successfully</string>
    <string name="label_score_result">"gets "</string>
    <string name="title_activity_login">Login</string>
    <string name="label_email">Email</string>
    <string name="label_password">Password</string>
    <string name="label_login">Login</string>
    <string name="label_forgot_password"><u>forgot password</u></string>
    <string name="label_register"><u>register</u></string>
    <string name="toast_error_login">incorrect username or password</string>
    <string name="toast_login_success">login successful</string>
    <string name="soon">coming soon</string>
    <string name="create_test">Create Test</string>
    <string name="label_old_test"><b>My old tests</b></string>
    <string name="label_code">Code</string>
    <string name="label_test_name">Name</string>
    <string name="label_date_update">Update</string>
    <string name="label_number">"No. "</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="Welcome">"Welcome "</string>
    <string name="create_station">create station</string>
    <string name="open_drawer">Open Drawer</string>
    <string name="close_drawer">Close Drawer</string>
</resources>
