<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.artsyntax.fitnesstest.TestActivity">

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="@dimen/margin_right"
        android:text="@string/create_test"
        android:textSize="@dimen/label_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="@dimen/padding"
        android:text="@string/label_old_test"
        android:textSize="@dimen/label_size" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:padding="@dimen/padding"
            android:text="@string/label_code"
            android:textSize="@dimen/label_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:padding="@dimen/padding"
            android:text="@string/label_test_name"
            android:textSize="@dimen/label_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:padding="@dimen/padding"
            android:text="@string/label_date_update"
            android:textSize="@dimen/label_size" />

    </LinearLayout>


</LinearLayout>
