<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <Button
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:layout_gravity="center_horizontal"
        android:text="@string/create_test"
        android:textSize="@dimen/label_size" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin"
        android:gravity="center"
        android:text="@string/label_old_test"
        android:textSize="@dimen/label_size"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/label_code"
            android:textSize="@dimen/label_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:gravity="center"
            android:text="@string/label_test_name"
            android:textSize="@dimen/label_size" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1.1"
            android:gravity="center"
            android:text="@string/label_date_update"
            android:textSize="@dimen/label_size" />

    </LinearLayout>

    <ScrollView
        android:id="@+id/svResult"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:freezesText="true"
                android:padding="@dimen/padding"
                android:textSize="@dimen/label_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:freezesText="true"
                android:padding="@dimen/padding"
                android:textSize="@dimen/label_size" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.1"
                android:freezesText="true"
                android:padding="@dimen/padding"
                android:textSize="@dimen/label_size" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>