<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/padding">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:freezesText="true"
            android:gravity="center_vertical"
            android:text="@string/label_station"
            android:textSize="@dimen/label_size" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etID"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/label_id"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:textSize="@dimen/label_size" />

    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/etScore"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:hint="@string/label_score"
            android:imeOptions="actionGo"
            android:inputType="numberDecimal"
            android:textSize="@dimen/label_size" />

    </LinearLayout>

    <Button
        android:id="@+id/btSubmit"
        android:layout_width="match_parent"
        android:layout_height="@dimen/layout_height"
        android:gravity="center"
        android:text="@string/button_send"
        android:textSize="@dimen/label_size" />

    <!--<com.artsyntax.fitnesstest.view.ResultFeedCustomViewGroup-->
        <!--android:layout_width="match_parent"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:padding="@dimen/padding_small" />-->

    <ListView
        android:id="@+id/listView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    </ListView>

</LinearLayout>